# saih-duero-scraping

./: .gitignore  LICENSE  README.md  example.py  pyproject.toml  requirements.txt
.github/workflows/: main-branch.yml  main.yml  multibranch.yml  publish-to-pypi.yml  publish-to-test-pypi.yml  pullrequest.yml
saih_duero_scraping/: data_downloader.py  gauging.py  gauging_collection.py  gauging_enum.py  hydrologic_years.py  main.py  summary_info_file.py
saih_duero_scraping/core/: data_downloader.py  gauging.py  gauging_collection.py  gauging_enum.py  hydrologic_url.py
