[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "saih-duero-scraping"
version = "1.0.3"
authors = [
    { name="Javier Carracedo" },
]
description = "Python package for web scraping operations over Saih Duero web page. "
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jke94/saih-duero-scraping"
"Bug Tracker" = "https://github.com/jke94/saih-duero-scraping/issues"